// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Table 1`] = `
<ProvideContext
  headers={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <WithContext(TrInner)>
        <Th>
          Annual Conference
        </Th>
        <Th>
          Year
        </Th>
        <Th>
          Location
        </Th>
        <Th>
          President
        </Th>
        <Th>
          Program Chair
        </Th>
        <Th>
          Conference Theme
        </Th>
      </WithContext(TrInner)>
    </Thead>
    <Tbody>
      <WithContext(TrInner)>
        <WithContext(TdInner)>
          31
        </WithContext(TdInner)>
        <WithContext(TdInner)>
          2017
        </WithContext(TdInner)>
        <WithContext(TdInner)>
          Alabama Community College System (ACCS)
        </WithContext(TdInner)>
        <WithContext(TdInner)>
          Mr. Toner Evans, Samford University
        </WithContext(TdInner)>
        <WithContext(TdInner)>
          Ms. Kelly Birchfield, Auburn University Montgomery
        </WithContext(TdInner)>
      </WithContext(TrInner)>
    </Tbody>
  </table>
</ProvideContext>
`;

exports[`Render table with an only one column 1`] = `
<ProvideContext
  headers={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <WithContext(TrInner)>
        <Th>
          Annual Conference
        </Th>
      </WithContext(TrInner)>
    </Thead>
    <Tbody>
      <WithContext(TrInner)>
        <WithContext(TdInner)>
          31
        </WithContext(TdInner)>
      </WithContext(TrInner)>
    </Tbody>
  </table>
</ProvideContext>
`;

exports[`Render table with conditional and unconditional column 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with conditional column 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr />
  </thead>
  <tbody>
    <tr />
  </tbody>
</table>
`;

exports[`Render table with more columns in body 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V4
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V5
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        />
        V6
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with more columns in header 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        C1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        C3
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C4
        </div>
        C4
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C5
        </div>
        C5
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C6
        </div>
        C6
      </td>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C1
        </div>
        V1
      </td>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          C3
        </div>
        V3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render table with only header and empty row 1`] = `
<table
  className=" responsiveTable"
>
  <thead>
    <tr>
      <td
        className=" pivoted"
      >
        <div
          className="tdBefore"
        >
          Test Column
        </div>
        Test Column
      </td>
    </tr>
  </thead>
  <tbody>
    <tr />
  </tbody>
</table>
`;

exports[`Render table without any column 1`] = `
<ProvideContext
  headers={Object {}}
>
  <table
    className=" responsiveTable"
  >
    <Thead>
      <WithContext(TrInner) />
    </Thead>
    <Tbody>
      <WithContext(TrInner) />
    </Tbody>
  </table>
</ProvideContext>
`;
